--- a/uld/statistics3.html
+++ b/uld/statistics3.html
@@ -9,50 +9,46 @@
 h4, h5 {
   text-align: left;
 }
-/* no any margin for first header */
-h4:first-child, h4:first-of-type {
-  margin: 0;
-}
 /* -- match statistics ----------------------------------------------------- */
 div.match {
-  padding-bottom: 15px;
+  padding-bottom: 2em;
 }
 table.match {
-  padding: 10px 0px 25px 20px;
+  padding: 1em 0 1em 1em;
 }
 table.match th {
-  padding: 1px 2px;
-  font-size: 13px;
+  padding: 0.1em 0.2em;
+  font-size: 3em;
   font-weight: bold;
   text-align: center;
   background-color: lightgray;
 }
 table.match th.left {
-  padding: 1px 2px;
-  font-size: 13px;
+  padding: 0.1em 0.2em;
+  font-size: 3em;
   font-weight: bold;
   text-align: left;
 }
 table.match td {
-  padding: 0 2px;
-  font-size: 14px;
+  padding: 0 0.1em;
+  font-size: 3em;
   text-align: left;
 }
 table.match td.right {
   text-align: right;
 }
 table.match td.name {
-  padding-left: 8px;
+  padding-left: 0.4em;
   text-align: left;
   font-weight: bold;
 }
 table.match td.sum {
   font-weight: bold;
-  padding: 0 4px;
+  padding: 0 0.2em;
 }
 table.match td.sumQ {
   font-weight: bold;
-  padding: 0 8px;
+  padding: 0 0.4em;
 }
 table.match tr.plus td {
   background-color: lime;
@@ -70,22 +66,18 @@ table.match tr.footer td {
   background-color: lightgray;
 }
 /* -- points --------------------------------------------------------------- */
-div.container {
-  padding: 10px;
-}
-
 div.column {
   position: relative;
-  width: 100px;
+  width: 20em;
   float: left;
-  padding: 0 10px 10px;
+  padding: 0 1em 1em;
 }
 div.header {
   position: relative;
   width: 100%;
-  font-size: 14px;
+  font-size: 3em;
   font-weight: bold;
-  padding: 3px 0;
+  padding: 0.2em 0;
 }
 div.data {
   position: relative;
@@ -103,10 +95,13 @@ div.splitter {
 div.row {
   position: relative;
   width: 100%;
-  height: 25px;
+  height: 4em;
   background-color: yellow;
   background-color: palegoldenrod;
-  padding: 6px 0 0 0;
+  padding: 0.3em 0;
+}
+div.row:last-child {
+  padding: 0.3em 0 0.5em 0;
 }
 
 div.a {
@@ -126,40 +121,36 @@ div.b {
 div.pt {
   background-color: red;
   background-color: lightcoral;
-  font-size: 15px;
-  padding: 2px;
+  font-size: 3em;
+  padding: 0.1em;
 }
 div.to {
   background-color: lightgray;
-  font-size: 15px;
-  padding: 2px;
+  font-size: 3em;
+  padding: 0.1em;
 }
 div.subst > div.in {
-  font-size: 9px;
-  padding: 1px;
+  font-size: 1.8em;
   background-color: yellowgreen;
   font-weight: bold;
   white-space: nowrap;
   overflow: hidden;
 }
 div.subst > div.out {
-  font-size: 8px;
-  padding: 1px;
+  font-size: 1.6em;
   background-color: red;
   background-color: lightcoral;
   white-space: nowrap;
   overflow: hidden;
 }
 div.serv > div.srvheader {
-  font-size: 8px;
-  padding: 1px;
+  font-size: 1.6em;
   background-color: lightgray;
   white-space: nowrap;
   overflow: hidden;
 }
 div.serv > div.info {
-  font-size: 9px;
-  padding: 1px;
+  font-size: 1.8em;
   white-space: nowrap;
   overflow: hidden;
 
@@ -179,12 +170,16 @@ function init() {
 </head>
 <body onload="init();">
 <div id="header">
-<a href="/ov.html#statistics_br3" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
-<div class="title">Grundlagen</div>
-<a href="/ov.html#statistics_br3" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
+  <div class="left">
+  <a href="/ov.html#statistics_br3"><img src="/image/logo.png"/></a>
+  <div>Statistik</div>
+  </div><div class="right">
+  <a href="/ov.html#statistics_br3"><img src="/image/logo.png"/></a>
+  </div>
 </div>
-<h4 id="m1" class="expandable" style="">21.Jän Volleystars - Brückl hotvolleys 3</h4>
-<div id="m1_2" class="match">
+</div>
+<div id="content_container"><h4 id="m1" class="expandable" style="">21.Jän Volleystars - Brückl hotvolleys 3</h4>
+<div id="m1_2" class="match expanded_container">
   <table class="match" cellspacing="0" cellpadding="2" border="1">
     <tr>
       <th>&nbsp;</th>
@@ -364,7 +359,7 @@ function init() {
 
   </table>
   <h5 id="mx1" class="expandable" style="">Verlauf</h5>
-<div id="mx1_2" class="container">
+<div id="mx1_2" class="container expanded_container">
 <div class="column">
   <div class="header">1. Satz</div>
   <div class="data">
@@ -615,7 +610,7 @@ function init() {
 
 </div>
 <h4 id="m2" class="expandable" style="">13.Jän Brückl hotvolleys - Villach</h4>
-<div id="m2_2" class="match">
+<div id="m2_2" class="match expanded_container">
   <table class="match" cellspacing="0" cellpadding="2" border="1">
     <tr>
       <th>&nbsp;</th>
@@ -750,10 +745,10 @@ function init() {
 </tr>
 
   </table>
-
+  
 </div>
 <h4 id="m3" class="expandable" style="">13.Jän Brückl hotvolleys - WSL</h4>
-<div id="m3_2" class="match">
+<div id="m3_2" class="match expanded_container">
   <table class="match" cellspacing="0" cellpadding="2" border="1">
     <tr>
       <th>&nbsp;</th>
@@ -888,10 +883,10 @@ function init() {
 </tr>
 
   </table>
-
+  
 </div>
 <h4 id="m4" class="expandable" style="">07.Jän LL: WSL - Brückl hotvolleys</h4>
-<div id="m4_2" class="match">
+<div id="m4_2" class="match expanded_container">
   <table class="match" cellspacing="0" cellpadding="2" border="1">
     <tr>
       <th>&nbsp;</th>
@@ -1048,10 +1043,10 @@ function init() {
 </tr>
 
   </table>
-
+  
 </div>
 <h4 id="m5" class="expandable" style="">26.Nov WSL M - Brückl hotvolleys 3</h4>
-<div id="m5_2" class="match">
+<div id="m5_2" class="match expanded_container">
   <table class="match" cellspacing="0" cellpadding="2" border="1">
     <tr>
       <th>&nbsp;</th>
@@ -1220,7 +1215,7 @@ function init() {
 
   </table>
   <h5 id="mx5" class="expandable" style="">Verlauf</h5>
-<div id="mx5_2" class="container">
+<div id="mx5_2" class="container expanded_container">
 <div class="column">
   <div class="header">1. Satz</div>
   <div class="data">
@@ -1561,7 +1556,7 @@ function init() {
 
 </div>
 <h4 id="m6" class="expandable" style="">23.Nov Brückl hotvolleys 3 - WSL 5</h4>
-<div id="m6_2" class="match">
+<div id="m6_2" class="match expanded_container">
   <table class="match" cellspacing="0" cellpadding="2" border="1">
     <tr>
       <th>&nbsp;</th>
@@ -1730,7 +1725,7 @@ function init() {
 
   </table>
   <h5 id="mx6" class="expandable" style="">Verlauf</h5>
-<div id="mx6_2" class="container">
+<div id="mx6_2" class="container expanded_container">
 <div class="column">
   <div class="header">1. Satz</div>
   <div class="data">
@@ -1936,7 +1931,7 @@ function init() {
 
 </div>
 <h4 id="m7" class="expandable" style="">14.Nov WSL 4 - Brückl hotvolleys 3</h4>
-<div id="m7_2" class="match">
+<div id="m7_2" class="match expanded_container">
   <table class="match" cellspacing="0" cellpadding="2" border="1">
     <tr>
       <th>&nbsp;</th>
@@ -2105,7 +2100,7 @@ function init() {
 
   </table>
   <h5 id="mx7" class="expandable" style="">Verlauf</h5>
-<div id="mx7_2" class="container">
+<div id="mx7_2" class="container expanded_container">
 <div class="column">
   <div class="header">1. Satz</div>
   <div class="data">
@@ -2296,7 +2291,7 @@ function init() {
 
 </div>
 <h4 id="m8" class="expandable" style="">10.Nov Brückl hotvolleys 3 - Volleystars 3</h4>
-<div id="m8_2" class="match">
+<div id="m8_2" class="match expanded_container">
   <table class="match" cellspacing="0" cellpadding="2" border="1">
     <tr>
       <th>&nbsp;</th>
@@ -2465,7 +2460,7 @@ function init() {
 
   </table>
   <h5 id="mx8" class="expandable" style="">Verlauf</h5>
-<div id="mx8_2" class="container">
+<div id="mx8_2" class="container expanded_container">
 <div class="column">
   <div class="header">1. Satz</div>
   <div class="data">
@@ -2669,7 +2664,7 @@ function init() {
 
 </div>
 <h4 id="m9" class="expandable" style="">04.Nov Vilach 2 - Brückl hotvolleys 2</h4>
-<div id="m9_2" class="match">
+<div id="m9_2" class="match expanded_container">
   <table class="match" cellspacing="0" cellpadding="2" border="1">
     <tr>
       <th>&nbsp;</th>
@@ -2794,7 +2789,7 @@ function init() {
 
   </table>
   <h5 id="mx9" class="expandable" style="">Verlauf</h5>
-<div id="mx9_2" class="container">
+<div id="mx9_2" class="container expanded_container">
 <div class="column">
   <div class="header">1. Satz</div>
   <div class="data">
@@ -3065,7 +3060,7 @@ function init() {
 
 </div>
 <h4 id="m10" class="expandable" style="">31.Okt Brückl hotvolleys 4 - Brückl hotvolleys 3</h4>
-<div id="m10_2" class="match">
+<div id="m10_2" class="match expanded_container">
   <table class="match" cellspacing="0" cellpadding="2" border="1">
     <tr>
       <th>&nbsp;</th>
@@ -3101,10 +3096,10 @@ function init() {
 </tr>
 
   </table>
-
+  
 </div>
 <h4 id="m11" class="expandable" style="">26.Okt Brückl hotvolleys 3 - Villach 4</h4>
-<div id="m11_2" class="match">
+<div id="m11_2" class="match expanded_container">
   <table class="match" cellspacing="0" cellpadding="2" border="1">
     <tr>
       <th>&nbsp;</th>
@@ -3273,7 +3268,7 @@ function init() {
 
   </table>
   <h5 id="mx11" class="expandable" style="">Verlauf</h5>
-<div id="mx11_2" class="container">
+<div id="mx11_2" class="container expanded_container">
 <div class="column">
   <div class="header">1. Satz</div>
   <div class="data">
@@ -3428,7 +3423,7 @@ function init() {
 
 </div>
 <h4 id="m12" class="expandable" style="">20.Okt Brückl hotvolleys 3 - Atsc 4</h4>
-<div id="m12_2" class="match">
+<div id="m12_2" class="match expanded_container">
   <table class="match" cellspacing="0" cellpadding="2" border="1">
     <tr>
       <th>&nbsp;</th>
@@ -3597,7 +3592,7 @@ function init() {
 
   </table>
   <h5 id="mx12" class="expandable" style="">Verlauf</h5>
-<div id="mx12_2" class="container">
+<div id="mx12_2" class="container expanded_container">
 <div class="column">
   <div class="header">1. Satz</div>
   <div class="data">
@@ -3756,7 +3751,7 @@ function init() {
 
 </div>
 <h4 id="m13" class="expandable" style="">13.Okt Villach 3 - Brückl hotvolleys 3</h4>
-<div id="m13_2" class="match">
+<div id="m13_2" class="match expanded_container">
   <table class="match" cellspacing="0" cellpadding="2" border="1">
     <tr>
       <th>&nbsp;</th>
@@ -3793,7 +3788,7 @@ function init() {
 
   </table>
   <h5 id="mx13" class="expandable" style="">Verlauf</h5>
-<div id="mx13_2" class="container">
+<div id="mx13_2" class="container expanded_container">
 <div class="column">
   <div class="header">1. Satz</div>
   <div class="data">
@@ -3942,6 +3937,7 @@ function init() {
 </div>
 
 </div>
-
+</div>
+<div id="footer">Brückl Hotvolleys<div>Brückl Hotvolleys</div></div>
 </body>
 </html>
