styling of calendar

--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -76,89 +76,50 @@ Brückl Hotvolleys<div>Brückl Hotvolleys</div>
 
   font-family: Arial, Helvetica, sans-serif;
 }
-#headerOld {
-  box-sizing: border-box;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 50px;
-  padding: 10px;
 
-  background-color: lightblue;
-  font-size: 30px;
-  font-weight: bold;
+#header > div > div {
+  margin-bottom: 0.3em;
+  padding: 0 0.5em;
+
+  font-size: 4em;
 }
-#headerOld > a {
-  position: absolute;
-  top: 6px;
-  border: 4px solid whitesmoke;
-  /* box-shadow: 0px 0px 5px whitesmoke, 0px 0px 10px whitesmoke, 0px 0px 15px whitesmoke; */
-  height: 30px;
-}
+
 #header > div > .nav {
-  position: absolute;
-  width: 30px;
-  height: 26px;
+  width: 1.2em;
+  height: 0.9em;
   text-align: center;
-  font-size: 20px;
-  padding-top: 4px;
-  background-color: lightblue;
-  border-radius: 5px;
+  padding: 0.1em 0.1em 0.3em 0.1em;
+
+  background-color: aliceblue;
+  background-color: rgba(240, 248, 255, 0.6);
+  opacity: 0.9;
+
+  border-radius: 0.2em;
   cursor: pointer;
 }
 #header > div > .nav:hover {
   background-color: aliceblue;
-  background-color: rgba(240, 248, 255, 0.5);
-}
-#header > div > .nav.l1 {
-  left: 95px;
-}
-#header > div > .nav.l2 {
-  left: 125px;
-}
-#header > div > .nav.r1 {
-  right: 95px;
-}
-#header > div > .nav.r2 {
-  right: 125px;
-}
-#headerOld > .title {
-  position: absolute;
-  left: 160px;
-  right: 160px;
-  height: 26px;
-  text-align: left;
-  font-size: 20px;
-  padding-top: 4px;
-  background-color: lightblue;
+  background-color: rgba(240, 248, 255, 0.9);
 }
 
-#content {
-  position: absolute;
-  left: 0;
-  top: 150px;
-  bottom: 22px;
-  width: 100%;
-
+div#content_container {
   overflow: hidden;
   overflow-y: auto;
 }
 
-#content > .main > .week, #content > .main > .content_header {
+#content_container > .main > .week, #content_container > .main > .content_header {
   position: relative;
-  height: 100px;
-  padding: 0 10px;
+  height: 20em;
+  padding: 0 1em;
 }
-#content > .main > .content_header {
-  height: 30px;
+#content_container > .main > .content_header {
+  height: 5em;
 }
-#content > .main > .week > .day, #content > .main > .content_header > div {
+#content_container > .main > .week > .day, #content_container > .main > .content_header > div {
   box-sizing: border-box;
   display: block;
   position: relative;
   float: left;
-  /* height: 100px; */
   height: 100%;
   width: 14%;
   width: 14.2%;
@@ -166,45 +127,46 @@ Brückl Hotvolleys<div>Brückl Hotvolleys</div>
   border: 1px solid aliceblue;
   background-color: lightgray;
 }
-#content > .main > .week > .day > .date {
+#content_container > .main > .week > .day > .date {
   position: absolute;
-  right: 3px;
-  top: 3px;
+  right: 0.3em;
+  top: 0.2em;
   z-index: 1;
-  text-shadow: 1px  1px 1px aliceblue,
-               1px -1px 1px aliceblue,
-              -1px  1px 1px aliceblue,
-              -1px -1px 1px aliceblue,
-               1px  1px 2px aliceblue,
-               1px -1px 2px aliceblue,
-              -1px  1px 2px aliceblue,
-              -1px -1px 2px aliceblue,
-               2px  2px 2px lightgray,
-               2px -2px 2px lightgray,
-              -2px  2px 2px lightgray,
-              -2px -2px 2px lightgray;
+  text-shadow: 0.1em  0.1em 0.1em aliceblue,
+               0.1em -0.1em 0.1em aliceblue,
+              -0.1em  0.1em 0.1em aliceblue,
+              -0.1em -0.1em 0.1em aliceblue,
+               0.1em  0.1em 0.2em aliceblue,
+               0.1em -0.1em 0.2em aliceblue,
+              -0.1em  0.1em 0.2em aliceblue,
+              -0.1em -0.1em 0.2em aliceblue,
+               0.2em  0.2em 0.2em lightgray,
+               0.2em -0.2em 0.2em lightgray,
+              -0.2em  0.2em 0.2em lightgray,
+              -0.2em -0.2em 0.2em lightgray;
   background-color: transparent;
 
+  font-size: 2.2em;
   pointer-events: none;
 }
-#content > .main > .week > .day > .entry {
+#content_container > .main > .week > .day > .entry {
   position: relative;
   width: 100%;
   margin-bottom: 1px;
-  padding: 7px 3px;
+  padding: 0.2em 0.1em;
   overflow: hidden;
 
-  font-size: 9px;
+  font-size: 2.5em;
   text-align: left;
   white-space: pre;
   opacity: 0.5;
 }
-#content > .main > .week > .day.enabled > .entry.enabled {
+#content_container > .main > .week > .day.enabled > .entry.enabled {
   cursor: pointer;
   opacity: 1;
 }
 
-#content > .entryInfo {
+#content_container > .entryInfo {
   position: absolute;
   top: 0;
   left: 0;
@@ -217,15 +179,15 @@ Brückl Hotvolleys<div>Brückl Hotvolleys</div>
   z-index: 9;
   display: none;
 
-  font-size: 15px;
+  font-size: 3em;
   text-align: left;
   white-space: pre;
   font-family: Consolas, "Courier New", monospace;
 
   cursor: pointer;
 }
-#content > .entryInfo > b {
-  font-size: 15px;
+#content_container > .entryInfo > b {
+  font-size: 1em;
   text-align: left;
   white-space: pre;
   font-family: Consolas, "Courier New", monospace;
@@ -236,7 +198,7 @@ Brückl Hotvolleys<div>Brückl Hotvolleys</div>
 
 <div class="container">
   <div id="header">&nbsp;</div>
-  <div id="content">&nbsp;</div>
+  <div id="content_container">&nbsp;</div>
   <div id="footer">&nbsp;</div>
 </div>
 
