--- a/u11/index.html
+++ b/u11/index.html
@@ -18,14 +18,32 @@
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="2x_spielen" href="2x_spielen.html"><h3>2x Spielen</h3></a></td>
-<td><a id="aussenfuss" href="aussenfuss.html"><h3>Außenfuß</h3></a></td>
-<td><a id="ich_zu_mir" href="ich_zu_mir.html"><h3>Ich!  Zu mir!</h3></a></td>
 
   </tr>
   <tr>
     <td><a href="2x_spielen.html"><img src="2x_spielen.png" alt="2x Spielen"></a></td>
-<td><a href="aussenfuss.html"><img src="aussenfuss.png" alt="Außenfuß"></a></td>
+
+  </tr>
+</table>
+<table class="tactics" align="center" cellspacing="0" cellpadding="10">
+  <tr>
+    <td><a id="aussenfuss" href="aussenfuss.html"><h3>Außenfuß</h3></a></td>
+<td><a id="ich_zu_mir" href="ich_zu_mir.html"><h3>Ich!  Zu mir!</h3></a></td>
+
+  </tr>
+  <tr>
+    <td><a href="aussenfuss.html"><img src="aussenfuss.png" alt="Außenfuß"></a></td>
 <td><a href="ich_zu_mir.html"><img src="ich_zu_mir.png" alt="Ich!  Zu mir!"></a></td>
+
+  </tr>
+</table>
+<table class="tactics" align="center" cellspacing="0" cellpadding="10">
+  <tr>
+    <td><a id="3x_spielen" href="3x_spielen.html"><h3>3x Spielen</h3></a></td>
+
+  </tr>
+  <tr>
+    <td><a href="3x_spielen.html"><img src="3x_spielen.png" alt="3x Spielen"></a></td>
 
   </tr>
 </table>
