new infos for u10 and u11

--- a/u10/index.html
+++ b/u10/index.html
@@ -24,6 +24,10 @@
     <td><a href="2x_spielen.html"><img src="2x_spielen.png" alt="2x Spielen"></a></td>
 
   </tr>
+  <tr>
+    <td><a href="2x_spielen.html"><div>Zusammenspiel - zusammen spielen</div></a></td>
+
+  </tr>
 </table>
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
@@ -36,6 +40,11 @@
 <td><a href="ich_zu_mir.html"><img src="ich_zu_mir.png" alt="Ich!  Zu mir!"></a></td>
 
   </tr>
+  <tr>
+    <td><a href="aussenfuss.html"><div>Der Außenfuß stoppt die Bewegung zum Ball und erleichtert das Zielen zur Zielposition (Mitspieler).</div></a></td>
+<td><a href="ich_zu_mir.html"><div>Das Mitsprechen unterstützt die Entscheidung zur besseren Verteilung der Aufgaben zwischen den Spielerinnen.</div></a></td>
+
+  </tr>
 </table>
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
@@ -44,6 +53,10 @@
   </tr>
   <tr>
     <td><a href="3x_spielen.html"><img src="3x_spielen.png" alt="3x Spielen"></a></td>
+
+  </tr>
+  <tr>
+    <td><a href="3x_spielen.html"><div>3x Spielen - Annahme/Verteidigung - Aufspiel - Angriff</div></a></td>
 
   </tr>
 </table>
