--- a/u11/index.html
+++ b/u11/index.html
@@ -24,6 +24,10 @@
     <td><a href="2x_spielen.html"><img src="2x_spielen.png" alt="2x Spielen"></a></td>
 
   </tr>
+  <tr>
+    <td><a href="2x_spielen.html"><div>Zusammenspiel - zusammen spielen</div></a></td>
+
+  </tr>
 </table>
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
@@ -36,14 +40,29 @@
 <td><a href="ich_zu_mir.html"><img src="ich_zu_mir.png" alt="Ich!  Zu mir!"></a></td>
 
   </tr>
+  <tr>
+    <td><a href="aussenfuss.html"><div>Der Außenfuß stoppt die Bewegung zum Ball und erleichtert das Zielen zur Zielposition (Mitspieler).</div></a></td>
+<td><a href="ich_zu_mir.html"><div>Das Mitsprechen unterstützt die Entscheidung zur besseren Verteilung der Aufgaben zwischen den Spielerinnen.</div></a></td>
+
+  </tr>
 </table>
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="3x_spielen" href="3x_spielen.html"><h3>3x Spielen</h3></a></td>
+<td><a id="3x_spielen_x" href="3x_spielen_x.html"><h3>3x Spielen +</h3></a></td>
+<td><a id="3x_spielen_xx" href="3x_spielen_xx.html"><h3>3x Spielen ++</h3></a></td>
 
   </tr>
   <tr>
     <td><a href="3x_spielen.html"><img src="3x_spielen.png" alt="3x Spielen"></a></td>
+<td><a href="3x_spielen_x.html"><img src="3x_spielen_x.png" alt="3x Spielen +"></a></td>
+<td><a href="3x_spielen_xx.html"><img src="3x_spielen_xx.png" alt="3x Spielen ++"></a></td>
+
+  </tr>
+  <tr>
+    <td><a href="3x_spielen.html"><div>3x Spielen - Annahme/Verteidigung - Aufspiel - Angriff</div></a></td>
+<td><a href="3x_spielen_x.html"><div>3x Spielen mit Angriff von außen</div></a></td>
+<td><a href="3x_spielen_xx.html"><div>3x Spielen, Angriff von außen mit Sicherung</div></a></td>
 
   </tr>
 </table>
