--- a/u11/aussenfuss.html
+++ b/u11/aussenfuss.html
@@ -134,6 +134,16 @@ function init() {
     return false;
   });
 
+  // init footer (if any text to set)
+  var footer = 'Der Außenfuß stoppt die Bewegung zum Ball und erleichtert das Zielen zur Zielposition (Mitspieler).';
+  if (footer) {
+    var elemFooter = document.querySelector('#footer');
+    if (elemFooter) {
+      elemFooter.innerHTML = footer;
+      elemFooter.style.textAlign = 'center';
+    }
+  }
+
   // get scripts and evaluate them
   var elemTpl = document.querySelector('#svg_script');
   if (elemTpl) {
