improve styling of calendar(header)

--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -115,7 +115,8 @@ div#content_container {
 #content_container > .main > .content_header {
   height: 5em;
 }
-#content_container > .main > .week > .day, #content_container > .main > .content_header > div {
+#content_container > .main > .week > .day,
+#content_container > .main > .content_header > div {
   box-sizing: border-box;
   display: block;
   position: relative;
@@ -126,6 +127,12 @@ div#content_container {
   width: 14.28%;
   border: 1px solid aliceblue;
   background-color: lightgray;
+}
+#content_container > .main > .content_header > div {
+  font-size: 3em;
+  font-weight: bold;
+  padding: 0.3em 0 0 0;
+  text-shadow: 0 0 2em white, 0 0 1em white, 0 0 1em white;
 }
 #content_container > .main > .week > .day > .date {
   position: absolute;
