--- a/ov.html
+++ b/ov.html
@@ -37,7 +37,7 @@ function init() {
 
     'ak': [
       'grundlagen_br4', 'schedule_br4', 'results_br4', 'standings_br4',
-      'grundlagen_br3', 'schedule_br3', 'results_br3', 'standings_br3', 'statistics_br3',
+      'grundlagen_br3', 'schedule_br3', 'results_br3', 'standings_br3', 'statistics_br3', 'teambuilding_br3',
       'schedule_br2', 'results_br2', 'standings_br2',
       'schedule_br1', 'results_br1', 'standings_br1'
     ],
@@ -45,7 +45,7 @@ function init() {
       'grundlagen_br4', 'schedule_br4', 'results_br4', 'standings_br4'
     ],
     'br3': [
-      'grundlagen_br3', 'schedule_br3', 'results_br3', 'standings_br3', 'statistics_br3'
+      'grundlagen_br3', 'schedule_br3', 'results_br3', 'standings_br3', 'statistics_br3', 'teambuilding_br3'
     ],
     'br2': ['schedule_br2', 'results_br2', 'standings_br2'],
     'br1': ['schedule_br1', 'results_br1', 'standings_br1'],
@@ -116,6 +116,7 @@ function init() {
       <a id="results_br3" href="results.html?key=br3"><h3>Ergebnisse</h3></a>
       <a id="standings_br3" href="standings.html?key=br3"><h3>Tabelle</h3></a>
       <a id="statistics_br3" href="/uld/statistics3.html"><h3>Statistik</h3></a>
+      <a id="teambuilding_br3" href="/uld/grundlagen3/tb"><h3>Teambuilding</h3></a>
     </div>
 
     <h2 id="br2" class="expandable">Brückl 2 - Landesliga</h2>
