--- a/uld/grundlagen3/index.html
+++ b/uld/grundlagen3/index.html
@@ -14,7 +14,7 @@
 <a href="/ov.html#grundlagen_br3"><img src="/image/logo.png"/></a>
 </div>
 </div>
-  <h1 class="tactics">Annahme</h1>
+  <div id="content_container"><h1 class="tactics">Annahme</h1>
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="3er_riegel" href="/uld/grundlagen3/annahme/zudritt.html"><h3>3er Riegel</h3></a></td>
@@ -171,6 +171,8 @@
   </tr>
 </table>
 
-
+</div>
+  <div id="footer">Brückl Hotvolleys<div>Brückl Hotvolleys</div>
+</div>
 </body>
 </html>
