--- a/u10/index.html
+++ b/u10/index.html
@@ -14,7 +14,7 @@
 <a href="/ov.html#grundlagen_u10"><img src="/image/logo.png"/></a>
 </div>
 </div>
-  <h1 class="tactics">Annahme und Verteidigung</h1>
+  <div id="content_container"><h1 class="tactics">Annahme und Verteidigung</h1>
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="2x_spielen" href="2x_spielen.html"><h3>2x Spielen</h3></a></td>
@@ -80,6 +80,8 @@
   </tr>
 </table>
 
-
+</div>
+  <div id="footer">Brückl Hotvolleys<div>Brückl Hotvolleys</div>
+</div>
 </body>
 </html>
