--- a/u12/index.html
+++ b/u12/index.html
@@ -14,7 +14,7 @@
 <a href="/ov.html#grundlagen_u12"><img src="/image/logo.png"/></a>
 </div>
 </div>
-  <h1 class="tactics">Annahme</h1>
+  <div id="content_container"><h1 class="tactics">Annahme</h1>
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="2er_riegel" href="/imageview.html?i=u12%2F2er_riegel.png&t=2er%20Riegel&x=Die%20Annahme%20des%20gegnerischen%20Service.&b=%2Fu12%232er_riegel"><h3>2er Riegel</h3></a></td>
@@ -125,6 +125,8 @@
   </tr>
 </table>
 
-
+</div>
+  <div id="footer">Brückl Hotvolleys<div>Brückl Hotvolleys</div>
+</div>
 </body>
 </html>
