--- a/uld/grundlagen/index.html
+++ b/uld/grundlagen/index.html
@@ -14,7 +14,7 @@
 <a href="/ov.html#grundlagen_br4"><img src="/image/logo.png"/></a>
 </div>
 </div>
-  <h1 class="tactics">Grundlagen</h1>
+  <div id="content_container"><h1 class="tactics">Grundlagen</h1>
 <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="spielfeld" href="/imageview.html?i=uld%2Fgrundlagen%2Fspielfeld.png&t=Spielfeld&x=Das%20Spielfeld.&b=%2Fuld%2Fgrundlagen%23spielfeld"><h3>Spielfeld</h3></a></td>
@@ -33,6 +33,8 @@
   </tr>
 </table>
 
-
+</div>
+  <div id="footer">Brückl Hotvolleys<div>Brückl Hotvolleys</div>
+</div>
 </body>
 </html>
