footer for tb overview

--- a/uld/grundlagen3/tb/index.html
+++ b/uld/grundlagen3/tb/index.html
@@ -15,6 +15,7 @@
   </div>
   </div>
 
+  <div id="content_container">
   <table class="tactics" align="center" cellspacing="0" cellpadding="10">
   <tr>
     <td><a id="tb1" href="/imageview.html?i=%2Fuld%2Fgrundlagen3%2Ftb%2Fitem1.jpg&t=Teambuilding&b=%2Fuld%2Fgrundlagen3%2Ftb%2F%23tb1"><img src="item1_small.jpg" alt="Teambuilding 1"></a></td>
@@ -31,5 +32,7 @@
     <td><a id="tb3" href="/imageview.html?i=%2Fuld%2Fgrundlagen3%2Ftb%2Fitem3.jpg&t=Teambuilding&b=%2Fuld%2Fgrundlagen3%2Ftb%2F%23tb3"><img src="item3_small.jpg" alt="Teambuilding 3"></a></td>
   </tr>
   </table>
+  </div>
+  <div id="footer">Brückl Hotvolleys<div>Brückl Hotvolleys</div></div>
 </body>
 </html>
