--- a/ov.html
+++ b/ov.html
@@ -16,7 +16,7 @@ body {
 function init() {
   var expanders = [
     'nw',
-    'u10', 'u11', 'u12', 'u13', 'u15',
+    'u10', 'u11', 'u12', 'u13', 'u15', 'u17',
     'ak',
     'br4', 'br3', 'br2', 'br1',
     'info'
@@ -27,13 +27,15 @@ function init() {
       'grundlagen_u11', 'schedule_u11', 'standings_u11',
       'grundlagen_u12', 'schedule_u12', 'standings_u12',
       'grundlagen_u13', 'schedule_u13', 'standings_u13',
-      'grundlagen_u15', 'schedule_u15', 'standings_u15'
+      'grundlagen_u15', 'schedule_u15', 'standings_u15',
+      'statistics_u17'
     ],
     'u10': ['grundlagen_u10', 'schedule_u10', 'standings_u10'],
     'u11': ['grundlagen_u11', 'schedule_u11', 'standings_u11'],
     'u12': ['grundlagen_u12', 'schedule_u12', 'standings_u12'],
     'u13': ['grundlagen_u13', 'schedule_u13', 'standings_u13'],
     'u15': ['grundlagen_u15', 'schedule_u15', 'standings_u15'],
+    'u17': ['statistics_u17'],
 
     'ak': [
       'grundlagen_br4', 'schedule_br4', 'results_br4', 'standings_br4',
@@ -96,6 +98,10 @@ function init() {
       <a id="standings_u15" href="standings.html?key=u15"><h3>Tabelle</h3></a>
     </div>
 
+    <h2 id="u17" class="expandable">U17</h2>
+    <div id="u17_2" class="expanded_container">
+      <a id="statistics_u17" href="/u17/statistics.html"><h3>Statistik</h3></a>
+    </div>
   </div>
 
   <h1 id="ak" class="expandable"><br>Allgemeine Klasse<br>&nbsp;</h1>
