--- a/ov.html
+++ b/ov.html
@@ -39,18 +39,39 @@ function init() {
 
     'ak': [
       'grundlagen_br4', 'schedule_br4', 'results_br4', 'standings_br4',
-      'grundlagen_br3', 'schedule_br3', 'results_br3', 'standings_br3', 'statistics_br3', 'teambuilding_br3',
-      'schedule_br2', 'results_br2', 'standings_br2',
-      'schedule_br1', 'results_br1', 'standings_br1'
+
+      'grundlagen_br3',
+        'schedule_br3', 'results_br3', 'standings_br3',
+        // 'schedule_br3g',
+        'results_br3g', 'standings_br3g',
+        'statistics_br3', 'teambuilding_br3',
+
+      // 'schedule_br2g',
+      'results_br2g', 'standings_br2g',
+
+      'schedule_br1', 'results_br1', 'standings_br1',
+      // 'schedule_br1g',
+      'results_br1g', 'standings_br1g'
     ],
     'br4': [
       'grundlagen_br4', 'schedule_br4', 'results_br4', 'standings_br4'
     ],
     'br3': [
-      'grundlagen_br3', 'schedule_br3', 'results_br3', 'standings_br3', 'statistics_br3', 'teambuilding_br3'
+      'grundlagen_br3',
+        'schedule_br3', 'results_br3', 'standings_br3',
+        // 'schedule_br3g',
+        'results_br3g', 'standings_br3g',
+        'statistics_br3', 'teambuilding_br3'
     ],
-    'br2': ['schedule_br2', 'results_br2', 'standings_br2'],
-    'br1': ['schedule_br1', 'results_br1', 'standings_br1'],
+    'br2': [
+      // 'schedule_br2g',
+      'results_br2g', 'standings_br2g'
+    ],
+    'br1': [
+      'schedule_br1', 'results_br1', 'standings_br1',
+      // 'schedule_br1g',
+      'results_br1g', 'standings_br1g'
+    ],
 
     'info': ['calendar', 'wunsch', 'gesucht', 'divinfo']
   };
@@ -115,28 +136,35 @@ function init() {
       <a id="standings_br4" href="standings.html?key=br4"><h3>Tabelle</h3></a>
     </div>
 
-    <h2 id="br3" class="expandable">Brückl 3 - Unterliga</h2>
+    <h2 id="br3" class="expandable">Brückl 3 - Unterliga/Landesliga</h2>
     <div id="br3_2" class="expanded_container">
       <a id="grundlagen_br3" href="/uld/grundlagen3"><h3>Grundlagen</h3></a>
-      <a id="schedule_br3" href="schedule.html?key=br3"><h3>Spieltermine</h3></a>
-      <a id="results_br3" href="results.html?key=br3"><h3>Ergebnisse</h3></a>
-      <a id="standings_br3" href="standings.html?key=br3"><h3>Tabelle</h3></a>
+
+      <a id="schedule_br3" href="schedule.html?key=br3"><h3>Spieltermine (AR)</h3></a>
+      <a id="results_br3" href="results.html?key=br3"><h3>Ergebnisse (AR)</h3></a>
+      <a id="standings_br3" href="standings.html?key=br3"><h3>Tabelle (AR)</h3></a>
+
+      <a id="results_br3g" href="results.html?key=br3g"><h3>Ergebnisse (GD)</h3></a>
+      <a id="standings_br3g" href="standings.html?key=br3g"><h3>Tabelle (GD)</h3></a>
+
       <a id="statistics_br3" href="/uld/statistics3.html"><h3>Statistik</h3></a>
       <a id="teambuilding_br3" href="/uld/grundlagen3/tb"><h3>Teambuilding</h3></a>
     </div>
 
     <h2 id="br2" class="expandable">Brückl 2 - Landesliga</h2>
     <div id="br2_2" class="expanded_container">
-      <a id="schedule_br2" href="schedule.html?key=br2"><h3>Spieltermine</h3></a>
-      <a id="results_br2" href="results.html?key=br2"><h3>Ergebnisse</h3></a>
-      <a id="standings_br2" href="standings.html?key=br2"><h3>Tabelle</h3></a>
+      <!--a id="schedule_br2g" href="schedule.html?key=br2g"><h3>Spieltermine (GD)</h3></a-->
+      <a id="results_br2g" href="results.html?key=br2g"><h3>Ergebnisse (GD)</h3></a>
+      <a id="standings_br2g" href="standings.html?key=br2g"><h3>Tabelle (GD)</h3></a>
     </div>
 
     <h2 id="br1" class="expandable">Brückl 1 - Bundesliga</h2>
     <div id="br1_2" class="expanded_container">
-      <a id="schedule_br1" href="schedule.html?key=br1"><h3>Spieltermine</h3></a>
-      <a id="results_br1" href="results.html?key=br1"><h3>Ergebnisse</h3></a>
-      <a id="standings_br1" href="standings.html?key=br1"><h3>Tabelle</h3></a>
+      <a id="schedule_br1" href="schedule.html?key=br1"><h3>Spieltermine (MR)</h3></a>
+      <a id="results_br1" href="results.html?key=br1"><h3>Ergebnisse (MR)</h3></a>
+      <a id="standings_br1" href="standings.html?key=br1"><h3>Tabelle (MR)</h3></a>
+      <a id="results_br1g" href="results.html?key=br1g"><h3>Ergebnisse (GD)</h3></a>
+      <a id="standings_br1g" href="standings.html?key=br1g"><h3>Tabelle (GD)</h3></a>
     </div>
   </div>
 
